doc/logfile.txt
Project documentation
<---- javadoc command: ---->
javadoc
-sourcepath
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project
-source
17
-classpath
/Applications/Greenfoot.app/Contents/Java/greenfoot.jar:/Applications/Greenfoot.app/Contents/Java/bluejcore.jar:/Applications/Greenfoot.app/Contents/Java/javafx-base-20.0.1.jar:/Applications/Greenfoot.app/Contents/Java/javafx-graphics-20.0.1.jar:/Applications/Greenfoot.app/Contents/Java/javafx-controls-20.0.1.jar:/Applications/Greenfoot.app/Contents/Java/javafx-fxml-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-controls-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-web-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-media-20.0.1.jar:/Applications/Greenfoot.app/Contents/Java/javafx-base-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-media-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-graphics-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-swing-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/junit-4.12.jar:/Applications/Greenfoot.app/Contents/Java/junit-jupiter-params-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-jupiter-api-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-jupiter-engine-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-platform-suite-api-1.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-vintage-engine-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-jupiter-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-platform-engine-1.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-platform-launcher-1.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-platform-commons-1.5.2.jar:/Applications/Greenfoot.app/Contents/Java/hamcrest-core-1.3.jar:/Applications/Greenfoot.app/Contents/Java/opentest4j-1.2.0.jar:/Applications/Greenfoot.app/Contents/Java/bluej.jar:/Applications/Greenfoot.app/Contents/Java/classgraph-4.8.90.jar:/Applications/Greenfoot.app/Contents/Java/diffutils-1.2.1.jar:/Applications/Greenfoot.app/Contents/Java/commons-logging-1.2.jar:/Applications/Greenfoot.app/Contents/Java/commons-logging-1.1.3.jar:/Applications/Greenfoot.app/Contents/Java/jl1.0.1.jar:/Applications/Greenfoot.app/Contents/Java/opencsv-2.3.jar:/Applications/Greenfoot.app/Contents/Java/opencsv-2.4.jar:/Applications/Greenfoot.app/Contents/Java/xom-1.3.7.jar:/Applications/Greenfoot.app/Contents/Java/lang-stride.jar:/Applications/Greenfoot.app/Contents/Java/nsmenufx-2.1.8.jar:/Applications/Greenfoot.app/Contents/Java/wellbehavedfx-0.3.3.jar:/Applications/Greenfoot.app/Contents/Java/guava-17.0.jar:/Applications/Greenfoot.app/Contents/Java/simple-png-javafx-0.2.0.jar:/Applications/Greenfoot.app/Contents/Java/simple-png-0.2.0.jar:/Applications/Greenfoot.app/Contents/Java/httpcore-4.4.13.jar:/Applications/Greenfoot.app/Contents/Java/httpclient-4.3.6.jar:/Applications/Greenfoot.app/Contents/Java/httpcore-4.3.3.jar:/Applications/Greenfoot.app/Contents/Java/httpmime-4.1.1.jar:/Applications/Greenfoot.app/Contents/Java/httpclient-4.5.13.jar:/Applications/Greenfoot.app/Contents/Java/javafx/javafx.base.jar:/Applications/Greenfoot.app/Contents/Java/javafx/javafx.controls.jar:/Applications/Greenfoot.app/Contents/Java/javafx/javafx.fxml.jar:/Applications/Greenfoot.app/Contents/Java/javafx/javafx.graphics.jar:/Applications/Greenfoot.app/Contents/Java/javafx/javafx.media.jar:/Applications/Greenfoot.app/Contents/Java/javafx/javafx.properties.jar:/Applications/Greenfoot.app/Contents/Java/javafx/javafx.swing.jar:/Applications/Greenfoot.app/Contents/Java/javafx/javafx.web.jar:/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project
-d
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Elements-II-Group-3-Blackjack-Project
-windowtitle
Elements-II-Group-3-Blackjack-Project
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/17/docs/api/
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/BlackjackGame.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/settingScreen.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/switchButton.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Deck.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Rank.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Suit.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/GameState.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/GameWorld.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Hand.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/playButton.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Card.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/homeButton.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/StartScreen.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/button.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/settingsButton.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/CardGame.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/warningScreen.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/background.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/backgrounds.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/BlackjackHand.java
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/MyWorld.java
<---- end of javadoc command ---->
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/BlackjackGame.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/settingScreen.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/switchButton.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Deck.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Rank.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Suit.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/GameState.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/GameWorld.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Hand.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/playButton.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/Card.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/homeButton.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/StartScreen.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/button.java...
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/button.java:42: error: ')' expected
    mousePressed(Object this)
                       ^
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/button.java:42: error: not a statement
    mousePressed(Object this)
                        ^
/Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/button.java:42: error: ';' expected
    mousePressed(Object this)
                            ^
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/settingsButton.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/CardGame.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/warningScreen.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/background.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/backgrounds.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/BlackjackHand.java...
Loading source file /Users/mustafa/elements 2/Project/Elements-II-Group-3-Blackjack-Project/MyWorld.java...
3 errors
